--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="transport de personnes vtc taxi tout trajet">
+    <meta name="keywords" content="voiture van service transport taxi vtc ile de france paris">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>TaxiExpress</title>
 </head>
 <body>
+    <header>
+        <h1>TaxiExpress</h1>
+        <nav class="lien_navigation">
+            <ul>
+                 <a href="html/index.html"><li>accueil</li></a>
+                 <a href="html/quisommenous.html"><li>qui sommes nous</li></a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <p>
+            Que ce soit à Paris ou partout ailleurs, TaxiEpress est là pour vous accompagner avec notre flotte de véhicules, afin de faciliter vos déplacements de la maniére la plus agréable et rapide possible.
+        </p>
+    </main>
     
+    <footer>
+        <ul class="lien_footer">
+            <a href="quisommenous.html"><li>qui sommes nous</li></a>
+            <a href="www.facebook.fr"><li>Facebook</li></a>
+        </ul>
+    </footer>
 </body>
 </html>
